force-app/main/default/objects/Data_Principal_Request__c/Data_Principal_Request__c.object-meta.xml
<CustomObject>
    <description>Privacy and consent management requests from patients or families.</description>
    <label>Data Principal Request</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Data Principal Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Principal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>