force-app/main/default/objects/Data_Principal_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPR fields</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DPR fields Records</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>