force-app/main/default/objects/Data_Principal_Request__c/fields/Identity_Verified__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPR fields</label>
    <type>Checkbox</type>
</CustomField>