force-app/main/default/objects/Data_Principal_Request__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <label>DPR fields</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>DPR fields Records</relationshipLabel>
    <relationshipName>Individual</relationshipName>
    <type>Lookup</type>
</CustomField>