force-app/main/default/objects/Data_Principal_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>DPR fields</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DPR fields Records</relationshipLabel>
    <relationshipName>DataPrincipalRequestLead</relationshipName>
    <type>Lookup</type>
</CustomField>