force-app/main/default/objects/Data_Principal_Request__c/fields/Received_At__c.field-meta.xml
<CustomField>
    <fullName>Received_At__c</fullName>
    <label>DPR fields</label>
    <type>DateTime</type>
</CustomField>