force-app/main/default/objects/Data_Principal_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
<fullName>Request_Type__c</fullName>
<label>Request Type</label>
<type>Picklist</type>
<required>true</required>
</CustomField>