force-app/main/default/objects/Data_Principal_Request__c/fields/Resolution_Note__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Note__c</fullName>
    <label>DPR fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>