force-app/main/default/objects/Data_Principal_Request__c/fields/Status__c.field-meta.xml
<CustomField>
<fullName>Status__c</fullName>
<label>Status</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Standard</fullName>
<default>true</default>
<label>Standard</label>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>