force-app/main/default/objects/Data_Principal_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>DPR fields</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Erasure</fullName>
            </value>
            <value>
                <fullName>Grievance</fullName>
            </value>
            <value>
                <fullName>Nomination</fullName>
            </value>
            <value>
                <fullName>Consent withdrawal</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>